[gd_scene load_steps=26 format=2]

[ext_resource path="res://quiz4/Retry_wason.gd" type="Script" id=2]
[ext_resource path="res://resources/brainy_base.png" type="Texture" id=4]
[ext_resource path="res://resources/brainy_wrong.png" type="Texture" id=5]
[ext_resource path="res://quiz4/Options.gd" type="Script" id=6]
[ext_resource path="res://resources/fumetto.png" type="Texture" id=7]
[ext_resource path="res://resources/CantedComic Regular.otf" type="DynamicFontData" id=8]
[ext_resource path="res://resources/panel.png" type="Texture" id=9]
[ext_resource path="res://resources/brain.png" type="Texture" id=10]
[ext_resource path="res://resources/bottone_def.png" type="Texture" id=11]
[ext_resource path="res://quiz4/Answer.gd" type="Script" id=12]
[ext_resource path="res://resources/quiz4.png" type="Texture" id=13]
[ext_resource path="res://resources/brainy_thinking.png" type="Texture" id=14]
[ext_resource path="res://resources/brainy_correct.png" type="Texture" id=15]
[ext_resource path="res://quiz4/Continue_woson.gd" type="Script" id=16]
[ext_resource path="res://quiz4/ForwardB_wason.gd" type="Script" id=17]
[ext_resource path="res://resources/03_freccia_destra.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 35
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 300
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 8 )

[sub_resource type="StreamTexture" id=10]
flags = 4
load_path = "res://.import/random.png-ace8a98475a178820dcf30db7bd8de3c.stex"

[sub_resource type="DynamicFont" id=6]
size = 45
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 13 )
centered = false

[node name="Comic" type="Sprite" parent="background"]
position = Vector2( -743.637, 405.21 )
z_index = 1
texture = ExtResource( 7 )
centered = false
offset = Vector2( 742.888, -404.461 )
__meta__ = {
"_editor_description_": ""
}

[node name="RichTextLabel" type="RichTextLabel" parent="background/Comic"]
margin_left = 1495.0
margin_top = -40.0
margin_right = 2024.0
margin_bottom = 120.0
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "stai andando benissimo!
siamo al quarto livello
"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ForwardB" type="Button" parent="background/Comic"]
margin_left = 1959.82
margin_top = 93.1806
margin_right = 2097.82
margin_bottom = 229.181
icon = ExtResource( 18 )
flat = true
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PanelQuiz" type="Sprite" parent="background"]
visible = false
position = Vector2( 1268.65, 525.521 )
z_as_relative = false

[node name="QuizText" type="RichTextLabel" parent="background/PanelQuiz"]
margin_left = -548.776
margin_top = -272.233
margin_right = 515.224
margin_bottom = 417.767
custom_fonts/normal_font = SubResource( 9 )
custom_colors/default_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
text = "Ogni carta ha una lettera su un lato e un numero sull'altro. 
Devi verificare che sia rispettata questa regola: se c'è una vocale su un lato della carta, allora c'è un numero pari sull'altro lato. 
Per verificarlo puoi girare due carte. Quali gireresti?"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="QuizTitle" type="RichTextLabel" parent="background/PanelQuiz"]
margin_left = -208.761
margin_top = -409.418
margin_right = 277.239
margin_bottom = -286.418
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.74902, 0.32549, 0.32549, 1 )
text = "Le 4 Carte"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Options" type="Node2D" parent="background/PanelQuiz"]
script = ExtResource( 6 )

[node name="Card1" type="TextureButton" parent="background/PanelQuiz/Options"]
margin_left = -569.002
margin_top = 97.534
margin_right = 804.998
margin_bottom = 982.534
rect_scale = Vector2( 0.15, 0.3 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Options/Card1"]
margin_left = 551.424
margin_top = 200.677
margin_right = 792.424
margin_bottom = 1931.68
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "A

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card2" type="TextureButton" parent="background/PanelQuiz/Options"]
margin_left = -267.42
margin_top = 97.534
margin_right = 1118.58
margin_bottom = 988.535
rect_scale = Vector2( 0.2, 0.4 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Options/Card2"]
margin_left = 560.364
margin_top = 165.454
margin_right = 802.364
margin_bottom = 1896.45
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "B

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card3" type="TextureButton" parent="background/PanelQuiz/Options"]
margin_left = 36.79
margin_top = 97.534
margin_right = 1422.79
margin_bottom = 988.535
rect_scale = Vector2( 0.2, 0.4 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Options/Card3"]
margin_left = 560.333
margin_top = 169.495
margin_right = 824.333
margin_bottom = 1900.5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "C

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card4" type="TextureButton" parent="background/PanelQuiz/Options"]
margin_left = 346.086
margin_top = 97.875
margin_right = 1732.09
margin_bottom = 988.876
rect_scale = Vector2( 0.2, 0.4 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Options/Card4"]
margin_left = 533.606
margin_top = 178.404
margin_right = 800.606
margin_bottom = 1909.41
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "D

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer" type="Button" parent="background/PanelQuiz"]
margin_left = -120.533
margin_top = 342.229
margin_right = 293.467
margin_bottom = 507.229
rect_scale = Vector2( 0.7, 0.7 )
disabled = true
icon = ExtResource( 11 )
flat = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Answer"]
margin_left = 73.7685
margin_top = 37.3602
margin_right = 371.769
margin_bottom = 152.36
rect_clip_content = true
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "rispondi"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BrainSprites" type="Node" parent="background"]

[node name="brain_base" type="Sprite" parent="background/BrainSprites"]
texture = ExtResource( 4 )
centered = false

[node name="brain_thinking" type="Sprite" parent="background/BrainSprites"]
visible = false
texture = ExtResource( 14 )
centered = false

[node name="brain_wrong" type="Sprite" parent="background/BrainSprites"]
visible = false
texture = ExtResource( 5 )
centered = false

[node name="brain_correct" type="Sprite" parent="background/BrainSprites"]
visible = false
texture = ExtResource( 15 )
centered = false

[node name="random" type="Sprite" parent="background"]
visible = false
position = Vector2( 1182.2, 709.925 )
texture = SubResource( 10 )

[node name="PanelWrong" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 7 )
centered = false
__meta__ = {
"_editor_description_": ""
}

[node name="WrongTitle" type="RichTextLabel" parent="PanelWrong"]
margin_left = 800.0
margin_top = 276.0
margin_right = 1359.0
margin_bottom = 367.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.74902, 0.32549, 0.32549, 1 )
text = "Risposta Sbagliata!"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Hint" type="RichTextLabel" parent="PanelWrong"]
margin_left = 675.0
margin_top = 360.0
margin_right = 1408.0
margin_bottom = 524.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
text = "Non preoccuparti, è normale! 
Prova con il prossimo livello."
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Retry" type="Button" parent="PanelWrong"]
visible = false
margin_left = 797.671
margin_top = 524.396
margin_right = 1211.67
margin_bottom = 689.396
rect_scale = Vector2( 0.6, 0.6 )
icon = ExtResource( 11 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="PanelWrong/Retry"]
margin_left = 80.4871
margin_top = 42.2596
margin_right = 367.487
margin_bottom = 146.26
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
text = "ritenta"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Continue" type="Button" parent="PanelWrong"]
margin_left = 1057.04
margin_top = 524.055
margin_right = 1471.04
margin_bottom = 689.055
rect_scale = Vector2( 0.6, 0.6 )
icon = ExtResource( 11 )
flat = true
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="PanelWrong/Continue"]
margin_left = 61.3804
margin_top = 42.3697
margin_right = 353.38
margin_bottom = 157.37
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
text = "Continua"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PanelCorrect" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 7 )
centered = false
__meta__ = {
"_editor_description_": ""
}

[node name="CorrectTitle" type="RichTextLabel" parent="PanelCorrect"]
margin_left = 842.0
margin_top = 282.0
margin_right = 1280.0
margin_bottom = 362.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0.74902, 0.32549, 0.32549, 1 )
text = "Risposta esatta!"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CorrectText" type="RichTextLabel" parent="PanelCorrect"]
margin_left = 699.648
margin_top = 394.0
margin_right = 1395.65
margin_bottom = 531.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0.329412, 0.0745098, 0.0745098, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
text = "Congratulazioni!
andiamo al prossimo livello"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Continue" type="Button" parent="PanelCorrect"]
margin_left = 1216.18
margin_top = 473.193
margin_right = 1354.18
margin_bottom = 609.193
icon = ExtResource( 18 )
flat = true
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="pressed" from="background/Comic/ForwardB" to="background/Comic/ForwardB" method="_on_ForwardB_pressed"]
[connection signal="pressed" from="background/PanelQuiz/Options/Card1" to="background/PanelQuiz/Options" method="_on_Card1_pressed"]
[connection signal="pressed" from="background/PanelQuiz/Options/Card2" to="background/PanelQuiz/Options" method="_on_Card2_pressed"]
[connection signal="pressed" from="background/PanelQuiz/Options/Card3" to="background/PanelQuiz/Options" method="_on_Card3_pressed"]
[connection signal="pressed" from="background/PanelQuiz/Options/Card4" to="background/PanelQuiz/Options" method="_on_Card4_pressed"]
[connection signal="pressed" from="background/PanelQuiz/Answer" to="background/PanelQuiz/Answer" method="_on_Answer_pressed"]
[connection signal="pressed" from="PanelWrong/Retry" to="PanelWrong/Retry" method="_on_Retry_pressed"]
[connection signal="pressed" from="PanelWrong/Continue" to="PanelWrong/Continue" method="_on_Continue_pressed"]
[connection signal="pressed" from="PanelCorrect/Continue" to="PanelCorrect/Continue" method="_on_Continue_pressed"]
